--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -303,6 +303,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "prime number is number which is divisible by 1 and itself . it has only 2 factor.:"
+      ],
+      "metadata": {
+        "id": "FadXyMHRUzKU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "🧮 Why only go up to √n (square root of n)?\n",
         "\n",
         "Let’s say you’re checking if 36 is a prime:\n",
